[package]
name = "macroquad_p5"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2021"
description = "A macroquad template for creative coding, inspired by p5 / Processing."
repository = "https://github.com/kirinokirino/macroquad_p5"
documentation = ""
homepage = ""
readme = "README.md"
license = "gpl"
keywords = ["game"]
categories = ["games"]

[dependencies]
macroquad = { version = "0.3.13", default-features = false }
